s/pwords.css
.site-title, .site-description {
	text-shadow: 1px 1px 2px #002147; 
}

/* SELECT FORM STYLES */

input[type="submit"] {
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
}

#pword-form {
	width: 100%;
	position: relative;
	box-sizing: border-box;
	overflow-x: hidden;
	background: #fff;
	border-bottom: 1px solid #eee;
	padding: 2rem 0 0;
}

#pword-form h1 {
	position: relative;
	top: -4rem;
	color: #fff;
	width: 100%;
	margin: 0 0 -2rem;
	font-size: 1.7rem;
	text-align: center;
	text-shadow: 0 2px 3px rgba(0,0,0,.2);
}

#pword-form h2 {
	width: 100%;
	text-align: center;
	font-size: 1.2rem;
}

#pword-form img {
	width: 100%;
	height: auto;
}

#pword-form .form-slider {
	position: relative;
	white-space: nowrap;
	list-style: none;
	width: 100%;
	margin: 0;
	transform: translateX(0);
	transition: transform .2s cubic-bezier(0.77, 0, 0.175, 1);
}

#pword-form.next .form-slider {
	transform: translateX( -100% );
}

#pword-form fieldset {
	display: block;
	white-space: initial;
	box-sizing: border-box;
	width: 100%;
	vertical-align: top;
	padding: 2rem;
	position: relative;
	margin: 0;
}

#pword-form fieldset:after {
	display: block;
	content: '';
	clear: both;
}

#pword-form.has-js fieldset {
	display: inline-block;
}

#pword-form.has-js .form-nav {
	display: block;
	margin: 1rem 0 0;
	padding: 1rem 2rem;
	background: #fff;
	border: 1px solid #ddd;
	font-size: .7rem;
	font-weight: 600;
	letter-spacing: .1rem;
	text-transform: uppercase;
	text-align: center;
	color: #555;
	text-decoration: none;
	border-radius: .2rem;
	-webkit-transition: all .2s ease-in-out;
	transition: all .2s ease-in-out;
	text-shadow: none;
}

#pword-form .form-nav {
	display: none;
}

#pword-form .form-nav:hover,
#pword-form .form-nav:focus {
	background: #eee;
	cursor: pointer;
}

#pword-form #pword-next {
	float: right;
}

#pword-form #pword-previous {
	float: left;
}

#pword-form #pword-submit {
	float: right ;
	margin: 1rem 0 0;
}

#pword-form label {
	max-width: initial !important;
}

#pword-form h3 {
	color: #555;
	font-size: 1rem;
}

#pword-form .form-help {
	background: #f1f1f1;
	border-top: 1px solid #eee;
	padding: 2rem 1.5rem 1px;
	font-size: .9rem;
	font-family: "Hind", Arial, sans-serif;
	line-height: 1.2;
	color: #555;
}

@media screen and (min-width: 600px) {
	#pword-form {
		width: calc( 400px + 4rem );
		left: 0;
		border: 1px solid #eee;
		border-radius: 3px;
		margin: 0 auto 3rem;
	}
	#pword-form fieldset {
		padding: 2rem 4rem;
	}
}

/* SELF SERVICE */

.form-row {
	position: relative;
	margin-bottom: 2rem;
}

#passwordform {
	max-width: 600px;
	padding-bottom: 0;
}

@media screen and (min-width: 600px) {
	#passwordform {
		margin: 0 auto;
	}
}

#passwordform a {
	text-decoration: underline;
}

#passwordform legend {
	background: none;
	padding: 0 0 5px;
	color: #000;
	font-size: 1.25rem;
	text-transform: initial;
	letter-spacing: normal;
	border-bottom: 1px solid #ddd;
	width: 100%;
}

#passwordform label {
	color: #555;
}

.form-description {
	font-size: .9rem;
	padding-top: .5rem;
	color: #555;
	line-height: 1rem;
}

.popup {
	position: relative;
}

.popup-trigger {
	font-weight: bold;
}

#pword-reqs.has-js .popup-trigger {
	display: inline-block;
	clear: both;
	font-weight: normal;
	font-size: .9rem;
	color: #005eff;
	text-decoration: underline;
}

#pword-reqs.has-js .popup-trigger:hover {
	cursor: pointer;
}

#pword-reqs.has-js.open .popup-container {
	display: block;
}

#pword-reqs.has-js .popup-container {
	display: none;
	font-size: 1rem;
	position: absolute;
	bottom: 4.5rem;
	left: 0;
	background: #fff;
	padding: 1rem;
	border: 1px solid #ddd;
	box-shadow: 0 1rem 3rem rgba(0,0,0,.1);
	border-radius: .2rem;
	max-width: 400px;
}

#pword-reqs.has-js .popup-container:after {
	display: block;
	position: absolute;
	left: 2rem;
	bottom: -11px;
	content: '';
	width: 20px;
	height: 20px;
	background: #fff;
	border-color: #ddd;
	border-width: 0 0 1px 1px;
	border-style: solid;
	border-bottom-left-radius: .2rem;
	transform: rotate(-45deg);
}

#pword-reqs.has-js ul {
	margin: 0 0 1rem 1.5rem;
}

/* VALIDATION */

div.error, div.message, div.success {
	border: 1px solid #ddd;
	border-radius: .2rem;
	padding: 0.5em 1em;
	margin: 0 0 1rem;
}
div.error {
	border-color: #900;
	background-color: #fdd;
	color: #600;
}
div.success {
	border-color: #090;
	background-color: #dfd;
	color: #060;
}
div.none { display: none; }


#confpwmatch {
	display: block;
}

.pwscore1, .pwscore2, .pwscore3 {
	color: #000;
}
.pwscore4, .pwscore5 {
	color: #000;
}

div#pwscorediv.pwscore0 {
	background: #ddd;
}
div#pwscorediv.pwscore1 {
	background: linear-gradient(to right, #ff3a3a 0%,#ff3a3a 30%,#ddd 30%,#ddd 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
}
div#pwscorediv.pwscore2 {
	background: linear-gradient(to right, #ffac3a 0%,#ffac3a 50%,#ddd 50%,#ddd 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
}
div#pwscorediv.pwscore3 {
	background: linear-gradient(to right, #9ed92e 0%,#9ed92e 75%,#ddd 75%,#ddd 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
}
div#pwscorediv.pwscore4 {
	background: #1dd60e;
}

#pwscore {
	background-color: #fff;
	display: block;
	margin: 0;
	padding: 1rem 0;
}

.feedback {
	font-size: .9rem;
	padding: 1rem 0 0;
}

.feedback.score {
	display: none;
	position: relative;
	top: .5rem;
	width: 100%;
	z-index: 10;
	padding: 0;
}

.feedback.score.active {
	display: block;
}

#pwscorediv, #pwfeedback {
	display: block;
}

#pwscorediv {
	padding-top: 1rem;
	border-radius: .2rem .2rem 0 0;
	border-width: 0 1px 0;
	border-style: solid;
	border-color: #ddd;
}

#pwscorediv:before {
	display: block;
	position: absolute;
	left: 2rem;
	top: -10px;
	content: '';
	width: 20px;
	height: 20px;
	background: #ddd;
	border-top-right-radius: .2rem;
	transform: rotate(-45deg);
}

#pwscorediv.pwscore1:before {
	background: #ff3a3a;
}
#pwscorediv.pwscore2:before {
	background: #ffac3a;
}
#pwscorediv.pwscore3:before {
	background: #9ed92e;
}
#pwscorediv.pwscore4:before {
	background: #1dd60e;
}

#pwscorediv span {
	padding: 1rem;
}

#pwfeedback {
	background: #fff;
	padding: 0 1rem 1rem;
	border-radius: 0 0 .2rem .2rem;
	border-width: 0 1px 1px;
	border-style: solid;
	border-color: #ddd;
	margin: 0;
}

.yes {
	color: #090;
}
.no {
	color: #900;
}

#submitbutton:matches([disabled="true"]) { 
	background: transparent;
	border: 1px solid #ddd !important;
	color: #999 !important;
	cursor: initial;
}
.disabled {
	background: transparent !important;
	cursor: default !important;
}
.disabled:hover {
	background: transparent !important;
	cursor: default !important;
}
div#help_contact { 
	font-size: 90%; 
	font-weight: bold; 
	color: #000;
}


#start-over {
	margin-top: 2rem;
	border-top: 1px solid #999;
	padding-top: 2rem;
}

/** IE 10 #SAD **/
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
	main {
		display: block;
	}
}

